<resources>
    <string name="app_name" translatable="false">Virtual Bank</string>
    <string name="bottom_item_title_home">Home</string>
    <string name="bottom_item_title_transfer">Transfer</string>
    <string name="pin_code_page_enter_pin">Enter PIN</string>
    <string name="pin_code_page_confirm_pin">Confirm PIN</string>
    <string name="pin_code_page_logout">Logout</string>
    <string name="pin_code_page_confirm">Confirm</string>
    <string name="pin_mismatch_message">PIN does not match.\n%1$d attempts left.</string>
    <string name="too_many_attempts_message">Too many failed attempts. Please try again in 1 minute.</string>
    <string name="str_first_name">First name</string>
    <string name="str_last_name">Last name</string>
    <string name="str_confirm_password">Confirm password</string>
    <string name="str_password">Password</string>
    <string name="str_phone_number">Phone number</string>
    <string name="str_born_date">Born date</string>
    <string name="str_gender">Gender</string>
    <string name="str_get_credit">Bir zumda kridit oling</string>
    <string name="str_sign_up">Sign Up</string>
    <string name="str_refresh_code">Get the code</string>
    <string name="str_confirm">Confirmation</string>
    <string name="str_code_confirm_time">Code verification time</string>
    <string name="toolbar_title">Title </string>
    <string name="str_login">Login</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="theme_of_the_application">Theme of the application</string>
    <string name="widget_setup">Widget setup</string>
    <string name="todo">TODO</string>
    <string name="security">Security</string>
    <string name="str_this_send_phone_number_confiry_sms_code">Ushbu telefon raqamga tastiqlash kodi yuborildi</string>
    <string name="permissions">Permissions</string>
    <string name="notification">Notification</string>
    <string name="actions">Actions</string>
    <string name="application_language">Application language</string>
    <string name="logout">LogOut</string>
    <string name="consent_to_data_processing">Consent to data processing</string>
    <string name="public_offer">Public offer</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="version">Version </string>
    <string name="default_version"> " "1.0.0</string>
    <string name="defauld_languafe">English</string>
    <string name="default_theme_value">System</string>
    <string name="default_user_name">User User</string>
    <string name="forget_password">Forget password</string>
    <string name="str_error_unexpected">Kozda tutilmagan xatolik</string>
    <string name="str_this_send_phone_number_confirm_sms_code">A verification code has been sent to this phone number</string>
    <string name="str_success">Success</string>
    <string name="str_currency">so\'m</string>
    <string name="str_cards">Cards</string>
    <string name="str_last_transfer">Last transfer</string>
    <string name="str_payments">Payments</string>
    <string name="str_choose_language_title">Choose app language</string>
    <string name="str_choose_title">Choose</string>
    <string name="str_localization_uzb">Uzbek</string>
    <string name="str_localization_rus">Russian</string>
    <string name="str_localization_eng">English</string>
    <string name="str_payment">To\'lov</string>
    <string name="str_paymnet">Paymnet</string>
    <string name="str_widget_settings">Vidjet sozlamalari</string>
    <string name="str_hint_phone_number">+998 Telefon raqami</string>
    <string name="str_payment_for_phone_number">Payment for phone</string>
    <string name="str_advertising">Advertising</string>
    <string name="str_finances_service">Finances service</string>
    <string name="str_search">Search</string>
    <string name="str_saved_payments">Saved payments</string>
    <string name="my_home">My home</string>
    <string name="places_payments">Places payments</string>
    <string name="str_add">Add</string>
    <string name="str_num_0">0</string>
    <string name="str_num_1">1</string>
    <string name="str_num_2">2</string>
    <string name="str_num_3">3</string>
    <string name="str_num_4">4</string>
    <string name="str_num_5">5</string>
    <string name="str_num_6">6</string>
    <string name="str_num_7">7</string>
    <string name="str_num_8">8</string>
    <string name="str_num_9">9</string>
    <string name="confirm_pin">Confirm Pin</string>
    <string name="remove_pin">Remove Pin</string>
    <string name="timer_message">Please wait %1$d seconds before trying again.</string>
    <string name="pin_code_page_skip">Skip</string>
    <string name="pin_code_page_title">Protect with fingerprint or face</string>
    <string name="pin_code_page_text">To avoid entering the PIN code each time, you can enable fingerprint or face authentication.</string>
    <string name="pin_code_page_turn_on">Turn On</string>
    <string name="biometric_prompt_title">Biometric Authentication</string>
    <string name="biometric_prompt_subtitle">Authenticate with your biometrics</string>
    <string name="biometric_prompt_cancel">Cancel</string>
    <string name="str_transfer_type_income">Daromad</string>
    <string name="str_transfer_type_outcome">To\'lov</string>
    <string name="str_money_type_uzb">soum</string>
    <string name="str_transfer_cofir">Successfully</string>
    <string name="str_transfer_cencle">Amalga oshmadi</string>
    <string name="str_history_toolbar_title">Kirim-Chiqim</string>
    <string name="str_histiry_sort_name_income">Total profit</string>
    <string name="str_histiry_sort_name_outcome">Total expenses</string>
    <string name="str_servers_payment">Xizmatga to\'lov</string>
    <string name="paymnet">Paymnet</string>
    <string name="str_card_number">Kartaning raqami</string>
    <string name="str_validity_period">Amala qilish muddati</string>
    <string name="str_select">Select</string>
    <string name="str_show_amount">Ballansni Ko\'rsatish</string>
    <string name="str_show_cost_in_home">Harajatlarni asosiy sahifada ko\'rsatish</string>
    <string name="str_show_amount_in_home">Karta balansni asosiy sahifada ko\'rsatish</string>
    <string name="str_my_information">My Information</string>
    <string name="str_date_of_birth">Date of Birth</string>
    <string name="str_change">Change</string>
    <string name="str_male">Male</string>
    <string name="str_female">Female</string>
    <string name="str_undo_changes">Undo changes</string>
    <string name="str_save_changes">Save changes</string>
    <string name="str_delete_account">Delete account</string>
    <string name="str_change_information">Change informations</string>
    <string name="str_more">More</string>
    <string name="str_hint_card_number">0000 0000 0000 0000</string>
    <string name="str_hint_validity_period">MM/YY</string>
    <string name="str_add_card">Karta qo\'shish</string>
    <string name="str_card_name">Card name</string>
    <string name="str_no_data">No data</string>
    <string name="str_add_card_succes">Card added successfully</string>
    <string name="str_camera_by_scanner">Kamera orqali skanerlash</string>
    <string name="str_nfc_by_scanner">NFC orqali skanerlash</string>
    <string name="str_already_registered">If you have registered first</string>
    <string name="str_next">Next</string>
    <string name="str_family">Family</string>
    <string name="str_sign_up_direction">To register, enter your name, surname, date of birth and gender</string>
    <string name="str_back">Back</string>
    <string name="str_main_part">The main part</string>
    <string name="str_enter_basic_info">Enter a phone number, create a new password and confirm the password</string>
    <string name="str_phone_region_code">+998</string>
    <string name="str_enter_born_date_format">DD/MM/YYYY</string>
    <string name="str_bracket">(</string>
    <string name="transfer_to_my_card">Transfer to my card</string>
    <string name="where_to_transfer">Where to transfer</string>
    <string name="transfer_amount">Transfer amount</string>
    <string name="from_1_000_to_15_000_000_sum">from 1 000 to 15 000 000 sum</string>
    <string name="next">next</string>
    <string name="select_receiving_card">Select receiving card</string>
    <string name="str_plus">+ </string>
    <string name="str_minus">- </string>
    <string name="str_kirim_chikimlar">Transaction history</string>\
    <string name="str_tramsfer_history_is_empty">Not implemented yet</string>
    <string name="security_settings">Security settings</string>
    <string name="change_pin_code">Change PIN-code</string>
    <string name="login_with_fingerprint_or_face_id">Login with fingerprint or Face ID</string>
    <string name="lock_app_when_closed">Lock app when closed</string>
    <string name="confirm_payment">Confirm payment</string>
    <string name="str_security_time">%1$d sec</string>
    <string name="str_new_pin_code">Enter a new PIN code</string>
    <string name="str_confirm_new_pin_code">Confirm the new PIN code</string>
    <string name="close">Close</string>
    <string name="snackbar_icon">Snackbar icon</string>
    <string name="str_pin_code_same">New PIN code should not coincide with the old one</string>
    <string name="str_nfc">Nfc</string>
    <string name="str_qrd">QR</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_select_date">Select date</string>
    <string name="str_date_is_wrong">Write your born date correctly</string>
    <string name="str_updated_information_success">Your informations successfully updated!</string>
    <string name="str_logout_from_account">Logout from this account</string>
    <string name="str_notifications">Bildirishnomalar</string>
    <string name="str_you_money_transfer">Sizga pul o\'tkazildi</string>
    <string name="str_open_chek">Chekni ochish</string>
    <string name="str_recipient_card">Oluvchi kartasi:</string>
    <string name="str_interest_free_transfer">Interest free transfer</string>
    <string name="str_update">Update</string>
    <string name="str_enter_phone_number_password">Enter phone number and password</string>
    <string name="str_if_dont_account">If you don\'t have an account</string>
    <string name="str_from">from</string>
    <string name="str_soums_transfer_received">a transfer of soums was received</string>
    <string name="str_fill_card">To\'ldirish</string>
    <string name="str_history">Tarix</string>
    <string name="str_delete">Olib tashlash</string>
    <string name="str_requisites">Rekvizitlar</string>

    <string name="str_f.i.ish">F.S.L</string>
    <string name="str_date_card">Card expiration date</string>
    <string name="str_card_nuber">Pan</string>
    <string name="str_name_of_card">Card name</string>


</resources>