<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="16dp"
            android:orientation="vertical">

            <uz.androbeck.virtualbank.ui.customViews.inputs.VirtualBankInputSimple
                android:id="@+id/et_first_name"
                style="@style/VirtualBankInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                app:errorEnabled="false"
                app:hintText="@string/str_first_name" />

            <uz.androbeck.virtualbank.ui.customViews.inputs.VirtualBankInputSimple
                android:id="@+id/et_last_name"
                style="@style/VirtualBankInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                app:errorEnabled="false"
                app:hintText="@string/str_last_name" />

            <uz.androbeck.virtualbank.ui.customViews.inputs.VirtualBankInputSimple
                android:id="@+id/et_password"
                style="@style/VirtualBankInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                app:errorEnabled="false"
                app:hintText="@string/str_password" />

            <uz.androbeck.virtualbank.ui.customViews.inputs.VirtualBankInputSimple
                android:id="@+id/et_confirm_password"
                style="@style/VirtualBankInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                app:errorEnabled="false"
                app:hintText="@string/str_confirm_password" />

            <uz.androbeck.virtualbank.ui.customViews.inputs.VirtualBankInputSimple
                android:id="@+id/et_phone_number"
                style="@style/VirtualBankInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                app:errorEnabled="false"
                app:hintText="@string/str_phone_number" />

            <uz.androbeck.virtualbank.ui.customViews.inputs.VirtualBankInputSimple
                android:id="@+id/et_date"
                style="@style/VirtualBankInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                app:errorEnabled="false"
                app:hintText="@string/str_born_date" />

            <CheckBox
                android:id="@+id/cb_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Male" />

            <uz.androbeck.virtualbank.ui.customViews.buttons.VirtualBankProgressButton
                android:id="@+id/btn_sign_up"
                style="@style/VirtualBankButton.Filled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:enabled="true"
                android:text="@string/str_sign_up" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>