<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_above="@id/btn_next"
        android:layout_marginBottom="20dp"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_sign_up"
                android:textSize="18sp"
                android:textColor="@color/colorScrim"
                android:textStyle="bold"
                android:fontFamily="@font/exo2_medium"
                android:layout_marginTop="56dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="24dp"
                android:text="@string/str_sign_up_direction"
                android:textSize="14sp"
                android:textColor="@color/colorScrim"
                android:fontFamily="@font/exo2_medium"/>

            <uz.androbeck.virtualbank.ui.customViews.inputs.CustomOutlinedTextField
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                app:boxBackgroundColor="@android:color/transparent"
                app:clearable="true"
                app:hintText="@string/str_first_name" />

            <uz.androbeck.virtualbank.ui.customViews.inputs.CustomOutlinedTextField
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                app:boxBackgroundColor="@android:color/transparent"
                app:clearable="true"
                app:hintText="@string/str_last_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_born_date"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:hint="@string/str_born_date"
                    app:endIconDrawable="@drawable/ic_calendar"
                    app:endIconMode="custom"
                    app:endIconTint="@color/colorPrimary">

                    <com.vicmikhailau.maskededittext.MaskedEditText
                        android:id="@+id/et_born_date"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="number"
                        android:textColor="@color/colorScrim"
                        android:fontFamily="@font/exo2_medium"
                        android:textSize="14sp"
                        app:mask="##/##/####"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:hint="@string/str_gender"
                    android:clickable="false">

                    <AutoCompleteTextView
                        android:id="@+id/gender_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:inputType="none"
                        android:paddingHorizontal="12dp"
                        android:textColor="@color/colorScrim"
                        android:textSize="14sp"
                        android:fontFamily="@font/exo2_medium"
                        tools:ignore="LabelFor" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/ll"
        android:text="@string/str_next"
        android:textColor="@color/static_white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        android:layout_marginHorizontal="16dp"
        android:enabled="false"/>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/exo2_medium"
            android:text="@string/str_already_registered"
            android:textColor="@color/colorScrim"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/btn_back_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/exo2_medium"
            android:text="@string/str_login"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:textStyle="bold"
            android:padding="8dp"/>
    </LinearLayout>
</RelativeLayout>